# POCO-TTT

./: .gitignore  CLAUDE.md  pyproject.toml  train.py
.claude/agents/: paper-reproducer.md
configs/: config_global.py  configs.py  experiments.py
datasets/: dataloader.py
docs/: Experiments.md  Implementation.md  POCO-TTT.md
models/: multi_session_models.py
models/poyo/: poyo.py
poco_ttt/: __init__.py  e2e_ttt_trainer.py  fomaml_trainer.py  meta_utils.py
preprocess/: celegans.py
sbatch/: run_all_dynamical.sh  run_all_experiments.sh  run_chronos2_zeroshot.sh  run_classical_baselines.sh  run_compare_chronos2.sh  run_compare_ttt_methods.sh  run_dmd_test.sh  run_dynamical_horizons.sh  run_e2e_ttt.sh  run_fomaml.sh  run_koopman_ae_test.sh  run_mlp_baseline.sh  run_nlinear_baseline.sh  run_paper_baselines.sh  run_poco_baseline.sh  run_single_session_all.sh  run_single_session_celegans.sh  run_single_session_zebrafish.sh  run_texfilter_baseline.sh
scripts/: download_zebrafish_ahrens.py
tasks/: taskfunctions.py
utils/: logger.py
